feat: add file upload functionality for tenants with Cloudinary integration